# GREA

./: .gitignore  404.html  HVGs.py  README.md  benchmarking.py  dataprocess.py  enrich.py  genesig.py  grea.py  index.html  mkdocs.yml  objects.inv  plage.py  plot.py  pyproject.toml  run_benchmark.py  setup.py  sigtest.py  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md  installation.md  reference.md  usage.md
docs/style/: custom.css
docs/tutorial/: gene-obs_prerank_enrich.ipynb  gene-pheno_prerank_enrich.ipynb  interaction-obs_prerank_enrich.ipynb  interaction-pheno_prerank_enrich.ipynb
grea/: __init__.py  benchmarking.py  bipolar_profiler.py  dataprocess.py  enrich.py  enrich_signal.py  enrich_signal_np.py  enrich_signal_torch.py  enrich_test.py  grea.py  kgraph.py  library.py  out.py  plot.py  prob.py  prob_gamma.py  rankscore.py  run_benchmark.py  sigtest.py
grea/db/: Enrichr.KEGG_2021_Human.gmt  GO_Biological_Process_2018  GO_Cellular_Component_2018  GO_Molecular_Function_2018  GSE13268_GK.csv  GSE30550_H3N2_CRISGI_score.csv  KEGG_2021_Mouse  Mouse.MitoCarta3.0.csv  Mouse_Gene_Atlas
installation/: index.html
reference/: index.html
search/: search_index.json
src/: benchmarking.py  enrich.py  genesig.py  grea.py  run_benchmark.py  sigtest.py
tutorial/gene-obs_prerank_enrich/: index.html
tutorial/gene-pheno_prerank_enrich/: index.html
tutorial/interaction-obs_prerank_enrich/: index.html
tutorial/interaction-pheno_prerank_enrich/: index.html
usage/: index.html
